# backprop

./: .gitignore  CMakeLists.txt  README.md  backprop.h  functions.h  main.cpp  scalar.h  utils.h
.github/workflows/: unit_tests.yaml
apps/: and.cpp
example/: and.cpp
examples/: and.cpp
tests/: CMakeLists.txt  test_functions.cpp  test_main.cpp
tests/pytorch/: mse_example.py
